--- a/app/src/main/res/menu/menu_nav_view.xml
+++ b/app/src/main/res/menu/menu_nav_view.xml
@@ -10,6 +10,7 @@
             <item android:id="@+id/buses" android:title="Buses" android:icon="@drawable/ic_bus"/>
             <item android:id="@+id/routes" android:title="Routes" android:icon="@drawable/ic_route"/>
             <item android:id="@+id/settings" android:title="Settings" android:icon="@drawable/ic_settings"/>
+            <item android:id="@+id/passengers" android:title="Passengers" android:icon="@drawable/ic_passengers"/>
         </menu>
     </item>
 </menu>
